--- a/style.css
+++ b/style.css
@@ -23,6 +23,15 @@ html {
   font-optical-sizing: auto;
 }
 
+body,
+h1 {
+  margin: 0;
+}
+
+p {
+  margin-block-end: 0;
+}
+
 .background {
   height: 100vh;
   display: flex;
@@ -50,14 +59,16 @@ img {
 .wrapper__text {
   --pad: 2.1875rem;
   padding-inline: var(--pad);
-  padding-block-start: 2.125rem;
+  padding-block-start: 1.5625rem;
   padding-block-end: 2.75rem;
   font-size: var(--fs-400);
   font-weight: var(--fw-normal);
   text-align: center;
+  color: var(--clr-slate-500);
 }
 
 h1 {
   font-size: var(--fs-700);
   font-weight: var(--fw-bold);
+  color: var(--clr-slate-900);
 }
